# exoclaw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: pr.yml  release.yml
docs/: conversation-compaction.md  memory-model.md  temporal.md
exoclaw/: __init__.py  _compat.py  app.py  executor.py  iteration_policy.py
exoclaw/_mp_lib/: README.md  dataclasses.py  typing.py
exoclaw/agent/: __init__.py  conversation.py  loop.py
exoclaw/agent/tools/: __init__.py  protocol.py  registry.py
exoclaw/bus/: __init__.py  events.py  protocol.py  queue.py
exoclaw/channels/: __init__.py  manager.py  protocol.py
exoclaw/http/: __init__.py  _cpython.py  _mp.py
exoclaw/providers/: __init__.py  protocol.py  types.py
exoclaw/testing/: __init__.py  concurrency.py
exoclaw/utils/: __init__.py  tasks.py
mise/tasks/: release
nanobot/: app.py
nanobot/agent/: context.py  conversation.py  loop.py  subagent.py
nanobot/agent/tools/: base.py  protocol.py  registry.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py
tests/: test_app_coverage.py  test_channel_manager_coverage.py  test_commands.py  test_compat.py  test_executor.py  test_http.py  test_loop_coverage.py  test_loop_extension_points.py  test_loop_tool_span.py  test_micropython_compat.py  test_micropython_runner.py  test_provider_types.py  test_registry_coverage.py  test_task_cancel.py  test_tasks_isolation.py  test_testing_concurrency.py  test_tool_validation.py  test_turn_observability.py  test_utils_coverage.py
tests/_micropython_runner/: run.py
tests/_micropython_stubs/: __future__.py  dataclasses.py  datetime.py  typing.py
tests/micro/: test_agent_loop.py  test_agent_loop_full.py  test_agent_loop_paths.py  test_agent_loop_run.py  test_app.py  test_bus.py  test_channels.py  test_compat.py  test_executor.py  test_http.py  test_provider_types.py  test_tool_protocol.py  test_tool_registry.py
