[project]
name = "exoclaw"
version = "0.1.0"
description = "Protocol-only AI agent framework — bring your own everything"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "exoclaw contributors"}
]
keywords = ["ai", "agent", "chatbot", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "loguru>=0.7.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exoclaw"]

# Include non-Python files
[tool.hatch.build]
include = [
    "exoclaw/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "exoclaw/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "TID251"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"exoclaw.bus.queue.MessageBus" = {msg = "Use Bus from exoclaw.bus.protocol instead of the concrete MessageBus. Only exoclaw/app.py may import MessageBus as the default implementation."}

[tool.ruff.lint.per-file-ignores]
# These files legitimately reference the concrete MessageBus
"exoclaw/app.py" = ["TID251"]          # provides MessageBus as the default impl
"exoclaw/bus/__init__.py" = ["TID251"] # re-exports it as part of the bus module
"tests/*" = ["TID251"]                 # tests use the concrete impl directly

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
