[project]
name = "exoclaw"
version = "0.24.0"
description = "Protocol-only AI agent framework — bring your own everything"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "exoclaw contributors"}
]
keywords = ["agent", "ai", "framework", "protocol", "pluggable", "llm", "exoclaw", "cmdop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "structlog>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exoclaw"]

# Include non-Python files
[tool.hatch.build]
include = [
    "exoclaw/**/*.py",
    "exoclaw/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "exoclaw/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "TID251", "ANN"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"exoclaw.bus.queue.MessageBus" = {msg = "Use Bus from exoclaw.bus.protocol instead of the concrete MessageBus. Only exoclaw/app.py may import MessageBus as the default implementation."}
"asyncio.create_task" = {msg = "Use exoclaw.utils.create_isolated_task() instead. asyncio.create_task copies the caller's contextvars, which leaks DBOS workflow context (and structlog / per-turn bindings) into background tasks. The wrapper passes context=contextvars.Context() so each task starts with an empty contextvars snapshot."}

[tool.ruff.lint.per-file-ignores]
# These files legitimately reference the concrete MessageBus
"exoclaw/app.py" = ["TID251"]          # provides MessageBus as the default impl
"exoclaw/bus/__init__.py" = ["TID251"] # re-exports it as part of the bus module
"exoclaw/utils/tasks.py" = ["TID251"]  # this IS the create_task wrapper
"tests/*" = ["TID251"]                 # tests use the concrete impl directly
# The compat shim wraps cross-runtime values whose types differ
# between CPython and MicroPython — ``Any`` is the honest annotation.
"exoclaw/_compat.py" = ["ANN401"]
# MicroPython test stubs are intentionally minimal — they exist
# to satisfy ``import`` calls during the subprocess test, not to
# fully model CPython's typing surface. The ``N802`` exception
# covers ``Protocol`` / ``TypeGuard`` which keep their PascalCase
# to mirror the real typing module's public names.
"tests/_micropython_stubs/*" = ["ANN", "N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0",
]
