[project]
name = "exoclaw"
version = "0.26.2"
description = "Protocol-only AI agent framework — bring your own everything"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "exoclaw contributors"}
]
keywords = ["agent", "ai", "framework", "protocol", "pluggable", "llm", "exoclaw", "cmdop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "structlog>=25.0.0",
]

[project.optional-dependencies]
http = [
    # ``exoclaw.http.HTTPClient`` uses ``httpx`` on CPython for
    # connection pooling + battle-tested HTTP parsing. MicroPython
    # uses a hand-rolled stdlib path, so it doesn't need this dep.
    "httpx>=0.27.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",
    # ``exoclaw.http`` tests exercise the CPython httpx path.
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exoclaw"]

# Include non-Python files
[tool.hatch.build]
include = [
    "exoclaw/**/*.py",
    "exoclaw/py.typed",
    # ``_mp_lib/`` ships fillers for typing + dataclasses (modules
    # micropython-lib doesn't carry). The README inside it tells
    # firmware authors how to freeze the directory in a manifest;
    # bundle it with the wheel so the docs travel with the code.
    "exoclaw/_mp_lib/README.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "exoclaw/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "TID251", "ANN"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"exoclaw.bus.queue.MessageBus" = {msg = "Use Bus from exoclaw.bus.protocol instead of the concrete MessageBus. Only exoclaw/app.py may import MessageBus as the default implementation."}
"asyncio.create_task" = {msg = "Use exoclaw.utils.create_isolated_task() instead. asyncio.create_task copies the caller's contextvars, which leaks DBOS workflow context (and structlog / per-turn bindings) into background tasks. The wrapper passes context=contextvars.Context() so each task starts with an empty contextvars snapshot."}

[tool.ruff.lint.per-file-ignores]
# These files legitimately reference the concrete MessageBus
"exoclaw/bus/__init__.py" = ["TID251"] # re-exports it as part of the bus module
"exoclaw/utils/tasks.py" = ["TID251"]  # this IS the create_task wrapper
"tests/*" = ["TID251"]                 # tests use the concrete impl directly
# The compat shim wraps cross-runtime values whose types differ
# between CPython and MicroPython — ``Any`` is the honest annotation.
"exoclaw/_compat.py" = ["ANN401"]
# Logger parameters use ``Any`` because the runtime logger type
# differs between CPython (``structlog.FilteringBoundLogger``) and
# MicroPython (``_compat._StubLogger``) — pinning either is wrong
# on the other runtime, and the compat shim's contract is shape
# (``info`` / ``warning`` / ``error`` / ``bind``) not type.
"exoclaw/app.py" = ["ANN401", "TID251"]
"exoclaw/agent/loop.py" = ["ANN401"]
"exoclaw/channels/manager.py" = ["ANN401"]
# MicroPython test stubs are intentionally minimal — they exist
# to satisfy ``import`` calls during the subprocess test, not to
# fully model CPython's typing surface. The class- and method-name
# ignores cover stdlib mirrors that keep their canonical casing
# (``datetime`` lowercase, ``__init__`` synthesised inside
# ``_make_init`` for the dataclasses stub).
"tests/_micropython_stubs/*" = ["ANN", "N801", "N802", "N807"]
# ``exoclaw/_mp_lib/`` is the production home of typing +
# dataclasses fillers downstream firmware authors freeze in.
# Same naming/typing relaxations as the test stubs — these mirror
# stdlib shapes (``TypeVar``, synthesised ``__init__``).
"exoclaw/_mp_lib/*" = ["ANN", "N801", "N802", "N807"]
# The MicroPython runner and the test files it executes run on
# MicroPython 1.27 — ``typing`` is a stub there and full ANN
# annotations would just import-fail. Keep them pure-Python.
"tests/_micropython_runner/*" = ["ANN"]
"tests/micro/*" = ["ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# ``tests/micro/`` and ``tests/_micropython_runner/`` only run on
# MicroPython (driven by ``tests/test_micropython_runner.py`` via
# subprocess). The stubs are vendored ``__future__`` / ``typing``
# replacements that would conflict if imported on CPython.
addopts = "--ignore=tests/micro --ignore=tests/_micropython_runner --ignore=tests/_micropython_stubs"

[tool.coverage.run]
omit = [
    "tests/micro/*",
    "tests/_micropython_runner/*",
    # MP-runtime fillers core ships for plugin firmware authors —
    # never imported on CPython (real ``typing`` / ``dataclasses``
    # win on stdlib resolution order). The MP gate covers them.
    "exoclaw/_mp_lib/*",
    # MP-only HTTP backend — selected by ``HTTPClient`` only when
    # ``IS_MICROPYTHON``. CPython runs ``http/_cpython.py``; the
    # MP gate covers ``_mp.py`` end-to-end with in-memory fakes.
    "exoclaw/http/_mp.py",
]

[tool.coverage.report]
# Per-runtime exclusion. The negative-lookahead matches
# ``pragma: no cover`` only when NOT followed by ``(micropython)``
# — bare and ``(cpython)``-tagged exclude here, ``(micropython)``
# stays in scope (CPython CAN reach those lines).
#
# Mirror policy in
# ``tests/test_micropython_runner.py::_executable_lines_for``.
exclude_lines = [
    "pragma:\\s*no\\s*cover(?!\\s*\\(micropython\\))",
    # Protocol method bodies — bare ``...`` on its own line is the
    # standard idiom for unreachable abstract bodies (Protocol /
    # @abstractmethod). The MicroPython runner mirrors this exclusion
    # in ``tests/test_micropython_runner.py::_executable_lines_for``.
    "^\\s*\\.\\.\\.\\s*$",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0",
]
